# one-opc

./: .gitattributes  .gitignore  CLAUDE.md  Makefile  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: external-agent-smoke.yml
config/: agent_config.yaml  channel_config.yaml  company_corporate_config.yaml  llm_config.yaml  system_config.yaml
config/company_orgs/: org_content-studio_config.yaml  org_research-report-studio_config.yaml  org_test_config.yaml
docs/: FRONTEND_BACKEND_MAP.md  channel-bridges.md  channels.md  cli-chat-slash.md  company-metadata-ownership.md  saas-conversion-notes.md
opc/: __init__.py  cli_collab.py  engine.py  mcp_client.py
opc/channels/: __init__.py  base.py  dingtalk.py  discord.py  email.py  feishu.py  manager.py  matrix.py  mochat.py  provider_base.py  provider_registry.py  qq.py  session.py  slack.py  telegram.py  whatsapp.py
opc/cli/: app.py
opc/core/: attachment_content.py  attachment_store.py  company_tools.py  config.py  employee_registry.py  events.py  models.py  org_config.py  windows_ssl.py  worker_envelope.py
opc/database/: store.py
opc/layer0_interaction/: message_bus.py
opc/layer1_perception/: context_assembler.py  context_loader.py  task_router.py
opc/layer2_organization/: approval.py  collaboration_policy.py  (+35 more)
scripts/: install.sh  reset_stuck_task.py
tests/: _temp_paths.py  test_actor_runtime_company_mode.py  test_anthropic_env.py  test_approval_engine.py  test_attachment_multimodal_routing.py  test_browser_tools.py  test_builtin_role_overrides.py  test_canonical_memory.py  test_channel_contracts.py  test_channel_runtime_integration.py  test_channels.py  test_claude_code_adapter_env.py  test_cli_app.py  test_cli_runtime_store_helpers.py  test_collaboration_rpc.py  test_company_collaboration.py  test_company_org_config_alignment.py  test_company_plan_metadata_shape.py  test_company_recruiter.py  test_company_reorg.py  test_company_review_flow.py  test_company_role_session_behavior.py  test_company_runtime_suspend_resume.py  test_connectors_service.py  test_context_assembler_view.py  test_custom_org_runtime_guard.py  test_custom_org_work_item_runtime.py  test_engine_pid.py  test_engine_session_defaults.py  test_engine_store_binding.py  test_external_agent_monitoring.py  test_external_agent_preflight.py  test_external_broker_llm_env.py  test_external_broker_worker_relay.py  test_external_session_continuity.py  test_fix4_and_fix6.py  test_focused_memory_context.py  test_followup_fixes.py  test_gate_harness.py  test_history_compactor_retry.py  (+73 more)
(+387 files in other folders)
