[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opc"
version = "0.1.0"
description = "One-Person Company — Autonomous AI Agent collaboration system with natural language interface"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0",
    "prompt-toolkit>=3.0",
    "litellm==1.82.1",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "cryptography>=42.0",
    "aiosqlite>=0.19.0",
    "chromadb>=0.4.0",
    "httpx>=0.27.0",
    "loguru>=0.7.0",
    "playwright>=1.40",
    "mcp>=1.0.0",
    "anyio>=4.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    "python-pptx>=0.6.21",
]

[project.optional-dependencies]
# Backwards-compatible alias: browser tools are now native and the dependency
# is installed with the base package.
browser = []
# Optional legacy CLI board/TUI inspector; not installed by default.
cli-board = ["textual>=8.1.1"]
channels-telegram = ["python-telegram-bot>=21.0"]
channels-whatsapp = ["websockets>=12.0"]
channels-discord = ["discord.py>=2.3"]
channels-feishu = ["lark-oapi>=1.4.0"]
channels-mochat = ["python-socketio[asyncio_client]>=5.11.0"]
channels-dingtalk = ["dingtalk-stream>=0.21.0"]
channels-email = []
channels-slack = ["slack-sdk>=3.27.0"]
channels-qq = ["qq-botpy>=1.2.1"]
channels-matrix = ["matrix-nio>=0.24.0"]
channels-bridges = [
    "websockets>=12.0",
    "python-socketio[asyncio_client]>=5.11.0",
]
channels-all = [
    "python-telegram-bot>=21.0",
    "websockets>=12.0",
    "discord.py>=2.3",
    "lark-oapi>=1.4.0",
    "python-socketio[asyncio_client]>=5.11.0",
    "dingtalk-stream>=0.21.0",
    "slack-sdk>=3.27.0",
    "qq-botpy>=1.2.1",
    "matrix-nio>=0.24.0",
]
all = [
    "python-telegram-bot>=21.0",
    "websockets>=12.0",
    "discord.py>=2.3",
    "lark-oapi>=1.4.0",
    "python-socketio[asyncio_client]>=5.11.0",
    "dingtalk-stream>=0.21.0",
    "slack-sdk>=3.27.0",
    "qq-botpy>=1.2.1",
    "matrix-nio>=0.24.0",
]

[project.scripts]
opc = "opc.cli.app:main"

[tool.hatch.build.targets.wheel]
packages = ["opc"]

[tool.hatch.build.targets.wheel.force-include]
"config" = "opc/config_templates"
"skills/core" = "opc/skills_assets/core"

[tool.hatch.build.targets.sdist]
include = [
    "opc",
    "config",
    "config/prompts",
    "skills/core",
    "docs",
    "scripts",
    "README.md",
    "pyproject.toml",
]
